--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -31,7 +31,6 @@
     <ClCompile Include="App\Entities\src\Player.cpp" />
     <ClCompile Include="App\Entities\src\Bullet.cpp" />
     <ClCompile Include="App\Entities\src\ReloadingCircle.cpp" />
-    <ClCompile Include="App\Entities\src\UIElements.cpp" />
     <ClCompile Include="App\Systems\src\HealthSystem.cpp" />
     <ClCompile Include="App\Systems\src\RenderingSystem.cpp" />
     <ClCompile Include="App\Systems\src\MovementSystem.cpp" />
@@ -39,6 +38,16 @@
     <ClCompile Include="App\Systems\src\ShootingSystem.cpp" />
     <ClCompile Include="App\Systems\src\UISystem.cpp" />
     <ClCompile Include="App\Entities\src\EntityManager.cpp" />
+    <ClCompile Include="App\Components\src\Text.cpp" />
+    <ClCompile Include="App\Components\src\Bar.cpp" />
+    <ClCompile Include="App\Components\src\Button.cpp" />
+    <ClCompile Include="App\Entities\src\Title.cpp" />
+    <ClCompile Include="App\Entities\src\Description.cpp" />
+    <ClCompile Include="App\Entities\src\StartButton.cpp" />
+    <ClCompile Include="App\Entities\src\Score.cpp" />
+    <ClCompile Include="App\Entities\src\Countdown.cpp" />
+    <ClCompile Include="App\Entities\src\HealthBar.cpp" />
+    <ClCompile Include="App\Entities\src\BulletBar.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -76,7 +85,6 @@
     <ClInclude Include="App\Entities\include\Player.h" />
     <ClInclude Include="App\Entities\include\Bullet.h" />
     <ClInclude Include="App\Entities\include\ReloadingCircle.h" />
-    <ClInclude Include="App\Entities\include\UIElements.h" />
     <ClInclude Include="App\Systems\include\HealthSystem.h" />
     <ClInclude Include="App\Systems\include\RenderingSystem.h" />
     <ClInclude Include="App\Systems\include\MovementSystem.h" />
@@ -84,6 +92,16 @@
     <ClInclude Include="App\Systems\include\ShootingSystem.h" />
     <ClInclude Include="App\Systems\include\UISystem.h" />
     <ClInclude Include="App\Entities\include\EntityManager.h" />
+    <ClInclude Include="App\Components\include\Text.h" />
+    <ClInclude Include="App\Components\include\Bar.h" />
+    <ClInclude Include="App\Components\include\Button.h" />
+    <ClInclude Include="App\Entities\include\Title.h" />
+    <ClInclude Include="App\Entities\include\Description.h" />
+    <ClInclude Include="App\Entities\include\StartButton.h" />
+    <ClInclude Include="App\Entities\include\Score.h" />
+    <ClInclude Include="App\Entities\include\Countdown.h" />
+    <ClInclude Include="App\Entities\include\HealthBar.h" />
+    <ClInclude Include="App\Entities\include\BulletBar.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
