--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -190,11 +190,6 @@
     <ClInclude Include="App\Entities\include\Enemy.h" />
     <ClInclude Include="App\Entities\include\Player.h" />
     <ClInclude Include="App\Entities\include\ReloadingCircle.h" />
-    <ClInclude Include="App\Systems\include\CollisionSystem.h" />
-    <ClInclude Include="App\Systems\include\HealthSystem.h" />
-    <ClInclude Include="App\Systems\include\MovementSystem.h" />
-    <ClInclude Include="App\Systems\include\RenderingSystem.h" />
-    <ClInclude Include="App\Systems\include\ShootingSystem.h" />
     <ClInclude Include="App\Entities\include\EntityManager.h" />
     <ClInclude Include="App\Components\include\Bar.h" />
     <ClInclude Include="App\Components\include\Button.h" />
@@ -204,14 +199,20 @@
     <ClInclude Include="App\Entities\include\HealthBar.h" />
     <ClInclude Include="App\Entities\include\Score.h" />
     <ClInclude Include="App\Entities\include\StartButton.h" />
+    <ClInclude Include="App\Systems\include\HandleCollisions.h" />
+    <ClInclude Include="App\Systems\include\HandleShooting.h" />
+    <ClInclude Include="App\Systems\include\RenderEntities.h" />
+    <ClInclude Include="App\Components\include\Renderable.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="App\Components\include\Transform.h" />
     <ClInclude Include="App\Components\include\Velocity.h" />
-    <ClInclude Include="App\Systems\include\UISystem.h" />
     <ClInclude Include="App\Components\include\Text.h" />
     <ClInclude Include="App\Entities\include\Title.h" />
+    <ClInclude Include="App\Systems\include\UpdateHealth.h" />
+    <ClInclude Include="App\Systems\include\UpdateMovement.h" />
+    <ClInclude Include="App\Systems\include\UpdateUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App\Application\src\app.cpp" />
@@ -224,7 +225,6 @@
     <ClCompile Include="App\Components\src\Direction.cpp" />
     <ClCompile Include="App\Entities\src\Bullet.cpp" />
     <ClCompile Include="App\Entities\src\Enemy.cpp" />
-    <ClCompile Include="App\Systems\src\CollisionSystem.cpp" />
     <ClCompile Include="App\Entities\src\EntityManager.cpp" />
     <ClCompile Include="App\Components\src\Bar.cpp" />
     <ClCompile Include="App\Components\src\Button.cpp" />
@@ -235,13 +235,13 @@
     <ClCompile Include="App\Components\src\Health.cpp" />
     <ClCompile Include="App\Entities\src\Player.cpp" />
     <ClCompile Include="App\Entities\src\ReloadingCircle.cpp" />
-    <ClCompile Include="App\Systems\src\HealthSystem.cpp" />
-    <ClCompile Include="App\Systems\src\MovementSystem.cpp" />
-    <ClCompile Include="App\Systems\src\RenderingSystem.cpp" />
-    <ClCompile Include="App\Systems\src\ShootingSystem.cpp" />
     <ClCompile Include="App\Entities\src\HealthBar.cpp" />
     <ClCompile Include="App\Entities\src\Score.cpp" />
     <ClCompile Include="App\Entities\src\StartButton.cpp" />
+    <ClCompile Include="App\Systems\src\HandleCollisions.cpp" />
+    <ClCompile Include="App\Systems\src\HandleShooting.cpp" />
+    <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
+    <ClCompile Include="App\Components\src\Renderable.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -251,9 +251,11 @@
     </ClCompile>
     <ClCompile Include="App\Components\src\Transform.cpp" />
     <ClCompile Include="App\Components\src\Velocity.cpp" />
-    <ClCompile Include="App\Systems\src\UISystem.cpp" />
     <ClCompile Include="App\Components\src\Text.cpp" />
     <ClCompile Include="App\Entities\src\Title.cpp" />
+    <ClCompile Include="App\Systems\src\UpdateHealth.cpp" />
+    <ClCompile Include="App\Systems\src\UpdateMovement.cpp" />
+    <ClCompile Include="App\Systems\src\UpdateUI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
