--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -31,12 +31,6 @@
     <ClCompile Include="App\Entities\src\Player.cpp" />
     <ClCompile Include="App\Entities\src\Bullet.cpp" />
     <ClCompile Include="App\Entities\src\ReloadingCircle.cpp" />
-    <ClCompile Include="App\Systems\src\HealthSystem.cpp" />
-    <ClCompile Include="App\Systems\src\RenderingSystem.cpp" />
-    <ClCompile Include="App\Systems\src\MovementSystem.cpp" />
-    <ClCompile Include="App\Systems\src\CollisionSystem.cpp" />
-    <ClCompile Include="App\Systems\src\ShootingSystem.cpp" />
-    <ClCompile Include="App\Systems\src\UISystem.cpp" />
     <ClCompile Include="App\Entities\src\EntityManager.cpp" />
     <ClCompile Include="App\Components\src\Text.cpp" />
     <ClCompile Include="App\Components\src\Bar.cpp" />
@@ -48,6 +42,13 @@
     <ClCompile Include="App\Entities\src\Countdown.cpp" />
     <ClCompile Include="App\Entities\src\HealthBar.cpp" />
     <ClCompile Include="App\Entities\src\BulletBar.cpp" />
+    <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
+    <ClCompile Include="App\Systems\src\UpdateMovement.cpp" />
+    <ClCompile Include="App\Systems\src\HandleCollisions.cpp" />
+    <ClCompile Include="App\Systems\src\HandleShooting.cpp" />
+    <ClCompile Include="App\Systems\src\UpdateHealth.cpp" />
+    <ClCompile Include="App\Systems\src\UpdateUI.cpp" />
+    <ClCompile Include="App\Components\src\Renderable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -85,12 +86,6 @@
     <ClInclude Include="App\Entities\include\Player.h" />
     <ClInclude Include="App\Entities\include\Bullet.h" />
     <ClInclude Include="App\Entities\include\ReloadingCircle.h" />
-    <ClInclude Include="App\Systems\include\HealthSystem.h" />
-    <ClInclude Include="App\Systems\include\RenderingSystem.h" />
-    <ClInclude Include="App\Systems\include\MovementSystem.h" />
-    <ClInclude Include="App\Systems\include\CollisionSystem.h" />
-    <ClInclude Include="App\Systems\include\ShootingSystem.h" />
-    <ClInclude Include="App\Systems\include\UISystem.h" />
     <ClInclude Include="App\Entities\include\EntityManager.h" />
     <ClInclude Include="App\Components\include\Text.h" />
     <ClInclude Include="App\Components\include\Bar.h" />
@@ -102,6 +97,13 @@
     <ClInclude Include="App\Entities\include\Countdown.h" />
     <ClInclude Include="App\Entities\include\HealthBar.h" />
     <ClInclude Include="App\Entities\include\BulletBar.h" />
+    <ClInclude Include="App\Systems\include\RenderEntities.h" />
+    <ClInclude Include="App\Systems\include\UpdateMovement.h" />
+    <ClInclude Include="App\Systems\include\HandleCollisions.h" />
+    <ClInclude Include="App\Systems\include\HandleShooting.h" />
+    <ClInclude Include="App\Systems\include\UpdateHealth.h" />
+    <ClInclude Include="App\Systems\include\UpdateUI.h" />
+    <ClInclude Include="App\Components\include\Renderable.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
