--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -49,6 +49,7 @@
     <ClCompile Include="App\Systems\src\UpdateHealth.cpp" />
     <ClCompile Include="App\Systems\src\UpdateUI.cpp" />
     <ClCompile Include="App\Components\src\Renderable.cpp" />
+    <ClCompile Include="App\Components\src\Component.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -104,6 +105,7 @@
     <ClInclude Include="App\Systems\include\UpdateHealth.h" />
     <ClInclude Include="App\Systems\include\UpdateUI.h" />
     <ClInclude Include="App\Components\include\Renderable.h" />
+    <ClInclude Include="App\Components\include\Component.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
