--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="App\Systems\include\RenderEntities.h" />
     <ClInclude Include="App\Components\include\Renderable.h" />
     <ClInclude Include="App\Components\include\Component.h" />
+    <ClInclude Include="App\Systems\include\HandleInput.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -246,6 +247,7 @@
     <ClCompile Include="App\Systems\src\HandleShooting.cpp" />
     <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
     <ClCompile Include="App\Components\src\Renderable.cpp" />
+    <ClCompile Include="App\Systems\src\HandleInput.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
