--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -178,6 +178,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="App\Components\include\Animation.h" />
     <ClInclude Include="App\Application\include\app.h" />
     <ClInclude Include="App\Application\include\AppSettings.h" />
     <ClInclude Include="App\Application\include\main.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="App\Components\include\Renderable.h" />
     <ClInclude Include="App\Components\include\Component.h" />
     <ClInclude Include="App\Systems\include\HandleInput.h" />
+    <ClInclude Include="App\Systems\include\HandleAnimation.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -219,6 +221,7 @@
     <ClInclude Include="App\Systems\include\UpdateUI.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="App\Components\src\Animation.cpp" />
     <ClCompile Include="App\Application\src\app.cpp" />
     <ClCompile Include="App\Application\src\main.cpp" />
     <ClCompile Include="App\Utilities\src\SimpleController.cpp" />
@@ -248,6 +251,7 @@
     <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
     <ClCompile Include="App\Components\src\Renderable.cpp" />
     <ClCompile Include="App\Systems\src\HandleInput.cpp" />
+    <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
