--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -179,9 +179,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App\Components\include\Animation.h" />
-    <ClInclude Include="App\Application\include\app.h" />
-    <ClInclude Include="App\Application\include\AppSettings.h" />
-    <ClInclude Include="App\Application\include\main.h" />
+    <ClInclude Include="App\Utilities\include\app.h" />
+    <ClInclude Include="App\Utilities\include\AppSettings.h" />
+    <ClInclude Include="App\Utilities\include\main.h" />
     <ClInclude Include="App\Utilities\include\SimpleController.h" />
     <ClInclude Include="App\Utilities\include\SimpleSound.h" />
     <ClInclude Include="App\Utilities\include\SimpleSprite.h" />
@@ -193,7 +193,7 @@
     <ClInclude Include="App\Entities\include\Enemy.h" />
     <ClInclude Include="App\Entities\include\Player.h" />
     <ClInclude Include="App\Entities\include\ReloadingCircle.h" />
-    <ClInclude Include="App\Entities\include\EntityManager.h" />
+    <ClInclude Include="App\Managers\include\EntityManager.h" />
     <ClInclude Include="App\Components\include\Bar.h" />
     <ClInclude Include="App\Components\include\Button.h" />
     <ClInclude Include="App\Entities\include\BulletBar.h" />
@@ -209,6 +209,7 @@
     <ClInclude Include="App\Components\include\Component.h" />
     <ClInclude Include="App\Systems\include\HandleInput.h" />
     <ClInclude Include="App\Systems\include\HandleAnimation.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -216,13 +217,13 @@
     <ClInclude Include="App\Components\include\Velocity.h" />
     <ClInclude Include="App\Components\include\Text.h" />
     <ClInclude Include="App\Entities\include\Title.h" />
-    <ClInclude Include="App\Systems\include\UpdateHealth.h" />
-    <ClInclude Include="App\Systems\include\UpdateMovement.h" />
+    <ClInclude Include="App\Systems\include\HandleHealth.h" />
+    <ClInclude Include="App\Systems\include\HandleMovement.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App\Components\src\Animation.cpp" />
-    <ClCompile Include="App\Application\src\app.cpp" />
-    <ClCompile Include="App\Application\src\main.cpp" />
+    <ClCompile Include="App\Utilities\src\app.cpp" />
+    <ClCompile Include="App\Utilities\src\main.cpp" />
     <ClCompile Include="App\Utilities\src\SimpleController.cpp" />
     <ClCompile Include="App\Utilities\src\SimpleSound.cpp" />
     <ClCompile Include="App\Utilities\src\SimpleSprite.cpp" />
@@ -231,13 +232,14 @@
     <ClCompile Include="App\Components\src\Direction.cpp" />
     <ClCompile Include="App\Entities\src\Bullet.cpp" />
     <ClCompile Include="App\Entities\src\Enemy.cpp" />
-    <ClCompile Include="App\Entities\src\EntityManager.cpp" />
+    <ClCompile Include="App\Managers\src\EntityManager.cpp" />
     <ClCompile Include="App\Components\src\Bar.cpp" />
     <ClCompile Include="App\Components\src\Button.cpp" />
     <ClCompile Include="App\Entities\src\BulletBar.cpp" />
     <ClCompile Include="App\Entities\src\Countdown.cpp" />
     <ClCompile Include="App\Entities\src\Description.cpp" />
     <ClCompile Include="App\Components\src\Component.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameTest.cpp" />
     <ClCompile Include="App\Components\src\Health.cpp" />
     <ClCompile Include="App\Entities\src\Player.cpp" />
@@ -262,8 +264,8 @@
     <ClCompile Include="App\Components\src\Velocity.cpp" />
     <ClCompile Include="App\Components\src\Text.cpp" />
     <ClCompile Include="App\Entities\src\Title.cpp" />
-    <ClCompile Include="App\Systems\src\UpdateHealth.cpp" />
-    <ClCompile Include="App\Systems\src\UpdateMovement.cpp" />
+    <ClCompile Include="App\Systems\src\HandleHealth.cpp" />
+    <ClCompile Include="App\Systems\src\HandleMovement.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
