--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="App\Systems\include\HandleInput.h" />
     <ClInclude Include="App\Systems\include\HandleAnimation.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="App\Utilities\include\GenerateRandomValue.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -253,6 +254,7 @@
     <ClCompile Include="App\Components\src\Renderable.cpp" />
     <ClCompile Include="App\Systems\src\HandleInput.cpp" />
     <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
+    <ClCompile Include="App\Utilities\src\GenerateRandomValue.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
