--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -3,12 +3,6 @@
   <ItemGroup>
     <ClCompile Include="GameTest.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="App\Application\src\app.cpp">
-      <Filter>NextAPI</Filter>
-    </ClCompile>
-    <ClCompile Include="App\Application\src\main.cpp">
-      <Filter>NextAPI</Filter>
-    </ClCompile>
     <ClCompile Include="App\Utilities\src\SimpleController.cpp">
       <Filter>NextAPI</Filter>
     </ClCompile>
@@ -31,7 +25,6 @@
     <ClCompile Include="App\Entities\src\Player.cpp" />
     <ClCompile Include="App\Entities\src\Bullet.cpp" />
     <ClCompile Include="App\Entities\src\ReloadingCircle.cpp" />
-    <ClCompile Include="App\Entities\src\EntityManager.cpp" />
     <ClCompile Include="App\Components\src\Text.cpp" />
     <ClCompile Include="App\Components\src\Bar.cpp" />
     <ClCompile Include="App\Components\src\Button.cpp" />
@@ -52,18 +45,14 @@
     <ClCompile Include="App\Systems\src\HandleInput.cpp" />
     <ClCompile Include="App\Components\src\Animation.cpp" />
     <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
+    <ClCompile Include="App\Utilities\src\app.cpp" />
+    <ClCompile Include="App\Utilities\src\main.cpp" />
+    <ClCompile Include="App\Managers\src\EntityManager.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="App\Utilities\src\GenerateRandomValue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="App\Application\include\app.h">
-      <Filter>NextAPI</Filter>
-    </ClInclude>
-    <ClInclude Include="App\Application\include\AppSettings.h">
-      <Filter>NextAPI</Filter>
-    </ClInclude>
-    <ClInclude Include="App\Application\include\main.h">
-      <Filter>NextAPI</Filter>
-    </ClInclude>
     <ClInclude Include="App\Utilities\include\SimpleController.h">
       <Filter>NextAPI</Filter>
     </ClInclude>
@@ -89,7 +78,6 @@
     <ClInclude Include="App\Entities\include\Player.h" />
     <ClInclude Include="App\Entities\include\Bullet.h" />
     <ClInclude Include="App\Entities\include\ReloadingCircle.h" />
-    <ClInclude Include="App\Entities\include\EntityManager.h" />
     <ClInclude Include="App\Components\include\Text.h" />
     <ClInclude Include="App\Components\include\Bar.h" />
     <ClInclude Include="App\Components\include\Button.h" />
@@ -110,6 +98,12 @@
     <ClInclude Include="App\Systems\include\HandleInput.h" />
     <ClInclude Include="App\Components\include\Animation.h" />
     <ClInclude Include="App\Systems\include\HandleAnimation.h" />
+    <ClInclude Include="App\Utilities\include\app.h" />
+    <ClInclude Include="App\Utilities\include\AppSettings.h" />
+    <ClInclude Include="App\Utilities\include\main.h" />
+    <ClInclude Include="App\Managers\include\EntityManager.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="App\Utilities\include\GenerateRandomValue.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
