make enemy move off w random velocity and direction after spawning

--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -202,7 +202,7 @@
     <ClInclude Include="App\Entities\include\HealthBar.h" />
     <ClInclude Include="App\Entities\include\Score.h" />
     <ClInclude Include="App\Entities\include\StartButton.h" />
-    <ClInclude Include="App\Systems\include\HandleCollisions.h" />
+    <ClInclude Include="App\Systems\include\HandleCollision.h" />
     <ClInclude Include="App\Systems\include\HandleShooting.h" />
     <ClInclude Include="App\Systems\include\RenderEntities.h" />
     <ClInclude Include="App\Components\include\Renderable.h" />
@@ -211,6 +211,7 @@
     <ClInclude Include="App\Systems\include\HandleAnimation.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="App\Utilities\include\GenerateRandomValue.h" />
+    <ClInclude Include="App\Systems\include\HandleEnemyMovement.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -219,7 +220,7 @@
     <ClInclude Include="App\Components\include\Text.h" />
     <ClInclude Include="App\Entities\include\Title.h" />
     <ClInclude Include="App\Systems\include\HandleHealth.h" />
-    <ClInclude Include="App\Systems\include\HandleMovement.h" />
+    <ClInclude Include="App\Systems\include\HandlePlayerMovement.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App\Components\src\Animation.cpp" />
@@ -248,13 +249,14 @@
     <ClCompile Include="App\Entities\src\HealthBar.cpp" />
     <ClCompile Include="App\Entities\src\Score.cpp" />
     <ClCompile Include="App\Entities\src\StartButton.cpp" />
-    <ClCompile Include="App\Systems\src\HandleCollisions.cpp" />
+    <ClCompile Include="App\Systems\src\HandleCollision.cpp" />
     <ClCompile Include="App\Systems\src\HandleShooting.cpp" />
     <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
     <ClCompile Include="App\Components\src\Renderable.cpp" />
     <ClCompile Include="App\Systems\src\HandleInput.cpp" />
     <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
     <ClCompile Include="App\Utilities\src\GenerateRandomValue.cpp" />
+    <ClCompile Include="App\Systems\src\HandleEnemyMovement.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -267,7 +269,7 @@
     <ClCompile Include="App\Components\src\Text.cpp" />
     <ClCompile Include="App\Entities\src\Title.cpp" />
     <ClCompile Include="App\Systems\src\HandleHealth.cpp" />
-    <ClCompile Include="App\Systems\src\HandleMovement.cpp" />
+    <ClCompile Include="App\Systems\src\HandlePlayerMovement.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
