combine HandlePlayerMovement and HandleEnemyMovement into a single HandleMovement system

--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -37,7 +37,6 @@
     <ClCompile Include="App\Entities\src\BulletBar.cpp" />
     <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
     <ClCompile Include="App\Systems\src\HandlePlayerMovement.cpp" />
-    <ClCompile Include="App\Systems\src\HandleCollisions.cpp" />
     <ClCompile Include="App\Systems\src\HandleShooting.cpp" />
     <ClCompile Include="App\Systems\src\HandleHealth.cpp" />
     <ClCompile Include="App\Components\src\Renderable.cpp" />
@@ -50,7 +49,10 @@
     <ClCompile Include="App\Managers\src\EntityManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="App\Utilities\src\GenerateRandomValue.cpp" />
-    <ClCompile Include="App\Systems\src\MoveEnemies.cpp" />
+    <ClCompile Include="App\Utilities\src\Debug.cpp" />
+    <ClCompile Include="App\Systems\src\HandleCollision.cpp" />
+    <ClCompile Include="App\Systems\src\HandleEnemyMovement.cpp" />
+    <ClCompile Include="App\Systems\src\HandleMovement.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -91,7 +93,6 @@
     <ClInclude Include="App\Entities\include\BulletBar.h" />
     <ClInclude Include="App\Systems\include\RenderEntities.h" />
     <ClInclude Include="App\Systems\include\HandlePlayerMovement.h" />
-    <ClInclude Include="App\Systems\include\HandleCollisions.h" />
     <ClInclude Include="App\Systems\include\HandleShooting.h" />
     <ClInclude Include="App\Systems\include\HandleHealth.h" />
     <ClInclude Include="App\Components\include\Renderable.h" />
@@ -105,7 +106,10 @@
     <ClInclude Include="App\Managers\include\EntityManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="App\Utilities\include\GenerateRandomValue.h" />
-    <ClInclude Include="App\Systems\include\MoveEnemies.h" />
+    <ClInclude Include="App\Systems\include\HandleCollision.h" />
+    <ClInclude Include="App\Utilities\include\Debug.h" />
+    <ClInclude Include="App\Systems\include\HandleEnemyMovement.h" />
+    <ClInclude Include="App\Systems\include\HandleMovement.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
