--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="App\Utilities\include\GenerateRandomValue.h" />
     <ClInclude Include="App\Systems\include\HandleEnemyMovement.h" />
+    <ClInclude Include="App\Systems\include\HandleMovement.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -259,6 +260,7 @@
     <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
     <ClCompile Include="App\Utilities\src\GenerateRandomValue.cpp" />
     <ClCompile Include="App\Systems\src\HandleEnemyMovement.cpp" />
+    <ClCompile Include="App\Systems\src\HandleMovement.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
