--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -212,17 +212,16 @@
     <ClInclude Include="App\Utilities\include\Debug.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="App\Utilities\include\GenerateRandomValue.h" />
-    <ClInclude Include="App\Systems\include\HandleEnemyMovement.h" />
     <ClInclude Include="App\Systems\include\HandleMovement.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="App\Components\include\Tag.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="App\Components\include\Transform.h" />
     <ClInclude Include="App\Components\include\Velocity.h" />
     <ClInclude Include="App\Components\include\Text.h" />
     <ClInclude Include="App\Entities\include\Title.h" />
     <ClInclude Include="App\Systems\include\HandleHealth.h" />
-    <ClInclude Include="App\Systems\include\HandlePlayerMovement.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App\Components\src\Animation.cpp" />
@@ -259,7 +258,6 @@
     <ClCompile Include="App\Systems\src\HandleInput.cpp" />
     <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
     <ClCompile Include="App\Utilities\src\GenerateRandomValue.cpp" />
-    <ClCompile Include="App\Systems\src\HandleEnemyMovement.cpp" />
     <ClCompile Include="App\Systems\src\HandleMovement.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -273,7 +271,7 @@
     <ClCompile Include="App\Components\src\Text.cpp" />
     <ClCompile Include="App\Entities\src\Title.cpp" />
     <ClCompile Include="App\Systems\src\HandleHealth.cpp" />
-    <ClCompile Include="App\Systems\src\HandlePlayerMovement.cpp" />
+    <ClCompile Include="App\Components\src\Tag.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
