--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -35,19 +35,19 @@
     <ClCompile Include="App\Entities\src\Countdown.cpp" />
     <ClCompile Include="App\Entities\src\HealthBar.cpp" />
     <ClCompile Include="App\Entities\src\BulletBar.cpp" />
-    <ClCompile Include="App\Systems\src\RenderEntities.cpp" />
-    <ClCompile Include="App\Systems\src\HandleShooting.cpp" />
-    <ClCompile Include="App\Systems\src\HandleHealth.cpp" />
+    <ClCompile Include="App\Systems\src\RenderingHandler.cpp" />
+    <ClCompile Include="App\Systems\src\ShootingHandler.cpp" />
+    <ClCompile Include="App\Systems\src\HealthHandler.cpp" />
     <ClCompile Include="App\Components\src\Renderable.cpp" />
     <ClCompile Include="App\Components\src\Component.cpp" />
-    <ClCompile Include="App\Systems\src\HandleInput.cpp" />
+    <ClCompile Include="App\Systems\src\InputHandler.cpp" />
     <ClCompile Include="App\Components\src\Animation.cpp" />
-    <ClCompile Include="App\Systems\src\HandleAnimation.cpp" />
+    <ClCompile Include="App\Systems\src\AnimationHandler.cpp" />
     <ClCompile Include="App\Utilities\src\app.cpp" />
     <ClCompile Include="App\Utilities\src\main.cpp" />
     <ClCompile Include="App\Managers\src\EntityManager.cpp" />
-    <ClCompile Include="App\Systems\src\HandleCollision.cpp" />
-    <ClCompile Include="App\Systems\src\HandleMovement.cpp" />
+    <ClCompile Include="App\Systems\src\CollisionHandler.cpp" />
+    <ClCompile Include="App\Systems\src\MovementHandler.cpp" />
     <ClCompile Include="App\Components\src\Tag.cpp" />
     <ClCompile Include="App\Utilities\src\Helper.cpp" />
     <ClCompile Include="App\Managers\src\SystemManager.cpp" />
@@ -90,20 +90,20 @@
     <ClInclude Include="App\Entities\include\Countdown.h" />
     <ClInclude Include="App\Entities\include\HealthBar.h" />
     <ClInclude Include="App\Entities\include\BulletBar.h" />
-    <ClInclude Include="App\Systems\include\RenderEntities.h" />
-    <ClInclude Include="App\Systems\include\HandleShooting.h" />
-    <ClInclude Include="App\Systems\include\HandleHealth.h" />
+    <ClInclude Include="App\Systems\include\RenderingHandler.h" />
+    <ClInclude Include="App\Systems\include\ShootingHandler.h" />
+    <ClInclude Include="App\Systems\include\HealthHandler.h" />
     <ClInclude Include="App\Components\include\Renderable.h" />
     <ClInclude Include="App\Components\include\Component.h" />
-    <ClInclude Include="App\Systems\include\HandleInput.h" />
+    <ClInclude Include="App\Systems\include\InputHandler.h" />
     <ClInclude Include="App\Components\include\Animation.h" />
-    <ClInclude Include="App\Systems\include\HandleAnimation.h" />
+    <ClInclude Include="App\Systems\include\AnimationHandler.h" />
     <ClInclude Include="App\Utilities\include\app.h" />
     <ClInclude Include="App\Utilities\include\AppSettings.h" />
     <ClInclude Include="App\Utilities\include\main.h" />
     <ClInclude Include="App\Managers\include\EntityManager.h" />
-    <ClInclude Include="App\Systems\include\HandleCollision.h" />
-    <ClInclude Include="App\Systems\include\HandleMovement.h" />
+    <ClInclude Include="App\Systems\include\CollisionHandler.h" />
+    <ClInclude Include="App\Systems\include\MovementHandler.h" />
     <ClInclude Include="App\Components\include\Tag.h" />
     <ClInclude Include="App\Utilities\include\Helper.h" />
     <ClInclude Include="App\Managers\include\SystemManager.h" />
