have Event be able to contain variable number of entities

--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClCompile Include="App\Utilities\src\Helper.cpp" />
     <ClCompile Include="App\Managers\src\SystemManager.cpp" />
     <ClCompile Include="App\Systems\src\System.cpp" />
-    <ClCompile Include="App\Systems\src\SystemEvent.cpp" />
+    <ClCompile Include="App\Systems\src\Event.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -107,7 +107,7 @@
     <ClInclude Include="App\Utilities\include\Helper.h" />
     <ClInclude Include="App\Managers\include\SystemManager.h" />
     <ClInclude Include="App\Systems\include\System.h" />
-    <ClInclude Include="App\Systems\include\SystemEvent.h" />
+    <ClInclude Include="App\Systems\include\Event.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
